# leancode

./: .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding_backends.md  getting_started.md  supported_specs.md
examples/: balanced_bst.py  binary_search.py  merge_sort.py
proofs/: data_structures.lean  searching.lean  sorting.lean
src/vericode/: __init__.py  __main__.py  artifacts.py  cache.py  cli.py  exceptions.py  generator.py  parsing.py  proof_engine.py  spec.py  verifier.py
src/vericode/backends/: __init__.py  base.py  dafny.py  lean4.py  verus.py
src/vericode/models/: __init__.py  anthropic_provider.py  base.py  deepseek.py  openai_provider.py
tests/: conftest.py  test_backends.py  test_backends_subprocess.py  test_cache.py  test_cli.py  test_cli_extended.py  test_exceptions.py  test_generator.py  test_models.py  test_parsing.py  test_pipeline_edge_cases.py  test_proof_engine.py  test_providers_generate.py  test_searching.py  test_sorting.py  test_spec.py  test_verifier.py
