[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vericode"
version = "0.1.0"
description = "Formally verified AI code generation: natural language -> code + proof -> verified binary"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sushaan Kandukoori", email = "sushaan@users.noreply.github.com" },
]
keywords = [
    "formal-verification",
    "ai",
    "code-generation",
    "lean4",
    "dafny",
    "proof-assistant",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0,<14.0",
    "structlog>=24.0,<26.0",
    "anyio>=4.0,<5.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40,<1.0"]
openai = ["openai>=1.50,<2.0"]
all = ["vericode[anthropic,openai]"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.14",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "respx>=0.22,<1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
vericode = "vericode.cli:main"

[project.urls]
Homepage = "https://github.com/sushaan-k/vericode"
Documentation = "https://github.com/sushaan-k/vericode#readme"
Repository = "https://github.com/sushaan-k/vericode"
Issues = "https://github.com/sushaan-k/vericode/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vericode"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "UP007",
    "TC001",
    "TC003",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["vericode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = true
